Further build out Contacts and Companies

--- a/sniffersapp/static/css/james.css
+++ b/sniffersapp/static/css/james.css
@@ -301,11 +301,11 @@ dd.project-people {
 
 
 /* Contact & Company Forms */
-.form_control_contact, .form_control_company {
+/* .form_control_contact, .form_control_company {
     margin-bottom: 10px;
     width: 280px;
     height: 35px;
-}
+} */
 
 .form_control_prestart{
     text-align: left !important;
