--- a/sniffersapp/templates/daily_dockets/daily_docket_sum.html
+++ b/sniffersapp/templates/daily_dockets/daily_docket_sum.html
@@ -90,7 +90,7 @@
                               </div>
                               <div class="row">
                                   <div class="col-sm-4 docket_text">
-                                      <span class="docket_text_heading">ITEM OR PLANT:</span>
+                                      <span class="docket_text_heading">UNIT NO.:</span>
                                       <span id="docket_equipment_name">{{ docket.equipment }}</span>
                                   </div>
                                   <div class="col-sm-8 docket_text">
