--- a/sniffersapp/templates/daily_dockets/docket_signature.html
+++ b/sniffersapp/templates/daily_dockets/docket_signature.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-4 docket_text">
-                        <span class="docket_text_heading">ITEM OR PLANT:</span>
+                        <span class="docket_text_heading">UNIT NO.:</span>
                         <span id="docket_equipment_name">{{ docket.equipment }}</span>
                     </div>
                     <div class="col-sm-8 docket_text">
@@ -253,7 +253,7 @@
                           </div>
                       </div>
                         <div class="col-sm-6 docket_text docket_signature_item">
-                            <span class="docket_text_heading">Supervisor Signature</span>
+                            <span class="docket_text_heading">Supervisor Signature *</span>
                             <div class="wrapper">
                               <span class="operator-sig-validation"></span>
                               <canvas id="supervisor-sign-pad" class="signature-pad" style="border: .5px solid #d5d5d5;"></canvas>
@@ -261,7 +261,7 @@
                             <input class="hidden" name="supervisor_sign" id="supervisor_sign">
                         </div>
                         <div class="col-sm-6 docket_text docket_signature_item">
-                            <span class="docket_text_heading">Operator Signature</span>
+                            <span class="docket_text_heading">Operator Signature *</span>
                                 <div class="wrapper">
                                   <span class="operator-sig-validation"></span>
                                   <canvas id="operator-sign-pad" class="signature-pad" style="border: .5px solid #d5d5d5;"></canvas>
