--- a/sniffersapp/templates/timesheet/timesheet_weekly.html
+++ b/sniffersapp/templates/timesheet/timesheet_weekly.html
@@ -220,11 +220,11 @@
                                 <ul class="list-group clear-list">
                                     <li class="list-group-item fist-item">
                                         <span class="pull-right">{{ timesheet_sum.equipment }}</span>
-                                        ID
+                                        Unit No.
                                     </li>
                                     <li class="list-group-item">
                                         <span class="pull-right">{{ timesheet_sum.equipment_num }}</span>
-                                        Unit No
+                                        Item or Plant
                                     </li>
                                 </ul>
                             </div>
