--- a/sniffersapp/templates/connections/company_edit.html
+++ b/sniffersapp/templates/connections/company_edit.html
@@ -1,80 +1,140 @@
 {% extends "base.html" %}
 {% load static i18n %}
-{% block title %}Clients{% endblock %}
-{% block head_title %}Clients{% endblock %}
+{% load humanize %}
+{% block title %}Connections{% endblock %}
+{% block head_title %}Connections{% endblock %}
+
+{% block css %}
+<link href="{% static 'css/jquery.autocomplete.css' %}" rel="stylesheet">
+<link href="{% static 'css/plugins/summernote/summernote.css' %}" rel="stylesheet">
+<link href="{% static 'css/plugins/summernote/summernote-bs3.css' %}" rel="stylesheet">
+{{ company_form.media.css }}
+{% endblock %}
+
+{% block actions %}
+<a class="btn btn-primary visible-xs visible-sm" style="margin-right: 10px;" href="{% url 'connections:list' %}"><i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back</a></li>
+{% endblock %}
 
 {% block breadcrumb %}
-<h2>Contact</h2>
 <ol class="breadcrumb">
     <li>
-        <a href="index.html">Home</a>
+        <a href="{% url 'home' %}">Home</a>
     </li>
     <li>
-        <a href="{% url 'clients:list' %}">Clients</a>
+        <a href="{% url 'connections:list' %}">Connections</a>
+    </li>
+    <li>
+        <a href="{% url 'connections:list' %}">{{ company.company_name }}</a>
     </li>
     <li class="active">
-        <strong>New Company</strong>
+        <strong>Edit</strong>
     </li>
 </ol>
 {% endblock breadcrumb %}
 
-{% block action_btn %}
-<div class="btn-group pull-right">
-    <button data-toggle="dropdown" class="btn btn-primary btn-sm dropdown-toggle">Actions <span class="caret"></span></button>
-    <ul class="dropdown-menu">
-        <li onclick="company_form.myVariable.name='edit_company';company_form.submit();">
-            <a href="#">Save Company</a>
-        </li>
-        <li data-toggle="modal" data-target="#deleteCompanyModal">
-            <a href="#">Delete Company</a>
-        </li>
-        <li>
-            <a href="{% url 'clients:list' %}">Go Back</a>
-        </li>
-    </ul>
-</div>
-{% endblock action_btn %}
-
 {% block content %}
-<div class="col-lg-12">
-    <div class="ibox">
-        <div class="ibox-content">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="m-b-md">
-                        <h2>Edit Company</h2>
-                        {% for contact in contact_list %}
-                            {{ contact }}
-                        {% endfor %}    
-                    </div>
-                </div>
-            </div>
-            <div>
-                <form action="" id="company_form" role="form" method="POST">
-                    <input type="hidden" id="myVariable" name="" />
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <dl class="dl-horizontal">
-                                <dt>Company name:</dt> <dd>{{ company_form.company_name }}</dd>
-                                <dt>Website:</dt> <dd>{{ company_form.webaddress_company }}</dd>
-                                <dt>Email:</dt> <dd>{{ company_form.company_email }}</dd>
-                                <dt>Office phone:</dt> <dd>{{ company_form.company_phone }}</dd>
-                                <dt>linkedin:</dt> <dd>{{ company_form.linkedin }}</dd>
-                                <dt>facebook:</dt> <dd>{{ company_form.facebook }}</dd>
-                                <dt>twitter:</dt> <dd>{{ company_form.twitter }}</dd>
-                                <dt>Info:</dt> <dd>{{ company_form.additional_info }}</dd>
-                            </dl>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+<div class="row">
+    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
+        <a class="btn btn-primary btn-sm" href="{% url 'connections:list' %}">
+          <i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back
+        </a>
+    </div>
+    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
+        <a class="btn btn-primary btn-sm" onclick="company_form.myVariable.name='edit_company';company_form.submit();">
+          <i class="fa fa-floppy-o" style="padding-right: 5px;"></i>Save Company
+        </a>
+    </div>
+    <div class="docket_buttons btn-group visible-md visible-lg pull-left">
+        <a class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-company-delete">
+          <i class="fa fa-trash" style="padding-right: 5px;"></i>Delete Company
+        </a>
     </div>
 </div>
 
+<div class="col-lg-12">
+  <form id="company_form" role="form" method="POST">
+    <input type="hidden" id="myVariable" name="" />
+    {% csrf_token %}
+    {% if company_form.errors %}
+    <div class="ibox-content m-b-sm error-box">
+        <strong>Please ensure that you have completed all the required fields *</strong>
+    </div>
+    {% endif %}
+      <div class="ibox-content m-b-sm border-bottom">
+        <div class="row">
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label>{{ company_form.company_name.label }} *</label>
+              {{ company_form.company_name }}
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label>Website</label>
+              {{ company_form.webaddress_company }}
+            </div>
+          </div>
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label>{{ company_form.company_email.label }}</label>
+              {{ company_form.company_email }}
+            </div>
+          </div>
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >Office Phone</label>
+              {{ company_form.company_phone }}
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >{{ company_form.linkedin.label }}</label>
+              {{ company_form.linkedin }}
+            </div>
+          </div>
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >{{ company_form.facebook.label }}</label>
+              {{ company_form.facebook }}
+            </div>
+          </div>
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >{{ company_form.twitter.label }}</label>
+              {{ company_form.twitter }}
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >Additional Info</label>
+              {{ company_form.additional_info }}
+            </div>
+          </div>
+        </div>
+      </div>
+  </form>
+  <div class="row">
+    <div class="docket_buttons btn-group pull-right" style="margin-right: 15px; margin-top: 20px;">
+        <a class="btn btn-primary visible-xs visible-sm" onclick="company_form.myVariable.name='edit_company';company_form.submit();">
+          <i class="fa fa-floppy-o" style="padding-right: 5px;"></i>Save 
+        </a>
+    </div>
+    <div class="docket_buttons btn-group pull-left" style="margin-right: 15px; margin-top: 20px;">
+        <a class="btn btn-primary visible-xs visible-sm" data-toggle="modal" data-target="#modal-company-delete">
+          <i class="fa fa-trash" style="padding-right: 5px;"></i>Delete
+        </a>
+    </div>
+  </div>
+</div>
+
 <!-- Delete Company Modal -->
-<div class="modal inmodal fade" id="deleteCompanyModal" tabindex="-1" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="modal-company-delete" tabindex="-1" role="dialog"  aria-hidden="true">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
@@ -95,11 +155,55 @@
         </div>
     </div>
 </div>
+
+
 {% endblock content %}
 
 {% block javascript %}
-<!-- Page-Level Scripts -->
+
+<script src="{% static 'js/plugins/summernote/summernote.min.js' %}"></script>
+<script src="{% static 'js/jquery.autocomplete.js' %}"></script>
+
 <script>
+$('#summernote').summernote({
+  toolbar: [
+    ['style', ['bold', 'italic', 'underline']],
+    ['fontsize', ['fontsize']],
+    ['color', ['color']],
+    ['para', ['ul', 'ol', 'paragraph']],
+  ]
+});
+
+
 
 </script>
+
+{{ company_form.media.js }}
 {% endblock javascript %}
+
+
+
+
+
+<!-- Delete Company Modal -->
+<!-- <div class="modal inmodal fade" id="deleteCompanyModal" tabindex="-1" role="dialog"  aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title">Delete Company</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this company?</p>
+            </div>
+            <div class="modal-footer">
+                <form action="" name="delete_company" method="POST">
+                    {% csrf_token %}
+                    {{ delete_company_form }}
+                    <button type="button" class="btn btn-white" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-danger" name="delete_company">Delete company</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div> -->
