--- a/sniffersapp/templates/connections/contact_edit.html
+++ b/sniffersapp/templates/connections/contact_edit.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static i18n %}
+{% load humanize %}
 {% block title %}Connections{% endblock %}
 {% block head_title %}Connections{% endblock %}
 
@@ -7,8 +8,12 @@
 <link href="{% static 'css/jquery.autocomplete.css' %}" rel="stylesheet">
 <link href="{% static 'css/plugins/summernote/summernote.css' %}" rel="stylesheet">
 <link href="{% static 'css/plugins/summernote/summernote-bs3.css' %}" rel="stylesheet">
+{{ contact_form.media.css }}
 {% endblock %}
 
+{% block actions %}
+<a class="btn btn-primary visible-xs visible-sm" style="margin-right: 10px;" href="{% url 'connections:list' %}"><i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back</a></li>
+{% endblock %}
 
 {% block breadcrumb %}
 <ol class="breadcrumb">
@@ -18,80 +23,142 @@
     <li>
         <a href="{% url 'connections:list' %}">Connections</a>
     </li>
+    <li>
+        <a href="{% url 'connections:list' %}">{{ contact.contact_name }}</a>
+    </li>
     <li class="active">
         <strong>Edit</strong>
     </li>
 </ol>
 {% endblock breadcrumb %}
 
-{% block actions %}
-<button type="button" class="btn btn-danger btn-lg visible-xs visible-sm" data-toggle="modal" data-target="#modal-contact-delete">
-  <i class="fa fa-trash" style="padding-right: 5px;"></i>Delete contact
-</button>
-
-{% endblock %}
-
 {% block content %}
 <div class="row">
     <div class="docket_buttons btn-group visible-md visible-lg pull-left">
-        <a class="btn btn-info btn-sm" href="{% url 'connections:list' %}">
+        <a class="btn btn-primary btn-sm" href="{% url 'connections:list' %}">
           <i class="fa fa-arrow-circle-left" style="padding-right: 5px;"></i>Go Back
         </a>
     </div>
     <div class="docket_buttons btn-group visible-md visible-lg pull-left">
         <a class="btn btn-primary btn-sm" onclick="contact_form.myVariable.name='edit_contact';contact_form.submit();">
-          <i class="fa fa-paste" style="padding-right: 5px;"></i>Save contact
+          <i class="fa fa-floppy-o" style="padding-right: 5px;"></i>Save Contact
         </a>
     </div>
     <div class="docket_buttons btn-group visible-md visible-lg pull-left">
-        <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#modal-contact-delete">
-          <i class="fa fa-trash" style="padding-right: 5px;"></i>Delete contact
-        </button>
+        <a class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-contact-delete">
+          <i class="fa fa-trash" style="padding-right: 5px;"></i>Delete Contact
+        </a>
     </div>
 </div>
+
 <div class="col-lg-12">
-    <div class="ibox">
-        <div class="ibox-content">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="m-b-md">
-                        <h2>{{ contact.contact_name }}</h2>
-                    </div>
-                </div>
-            </div>
-            <form id="contact_form" role="form" method="POST">
-                <input type="hidden" id="myVariable" name="" />
-                {% csrf_token %}
-                <div class="row">
-                    <div class="col-lg-12">
-                        <dl class="dl-horizontal">
-                            <dt>First name:</dt> <dd>{{ contact_form.first_name }}</dd>
-                            <dt>Last name:</dt> <dd>{{ contact_form.last_name }}</dd>
-                            <dt>Company:</dt> <dd>{{ contact_form.company_name }}</dd>
-                            <dt>Contact Status:</dt> <dd>{{ contact_form.contact_status }}</dd>
-                            <dt>Job title:</dt> <dd>{{ contact_form.job_title }}</dd>
-                            <dt>Location:</dt> <dd>{{ contact_form.location }}</dd>
-                            <dt>Email:</dt> <dd>{{ contact_form.email_work }}</dd>
-                            <dt>Mobile phone:</dt> <dd>{{ contact_form.phone_mobile }}</dd>
-                            <dt>Office phone:</dt> <dd>{{ contact_form.phone_work }}</dd>
-                            <dt>linkedin:</dt> <dd>{{ contact_form.linkedin }}</dd>
-                            <dt>facebook:</dt> <dd>{{ contact_form.facebook }}</dd>
-                            <dt>twitter:</dt> <dd>{{ contact_form.twitter }}</dd>
-                            <dt>Info:</dt> <dd>{{ contact_form.additional_info }}</dd>
-                        </dl>
-                    </div>
-                </div>
-            </form>
-            <div class="row">
-              <div class="docket_buttons btn-group pull-left" style="margin-top: 35px;">
-                  <a class="btn btn-primary btn-lg visible-xs visible-sm" onclick="contact_form.myVariable.name='edit_contact';contact_form.submit();">
-                    <i class="fa fa-paste" style="padding-right: 5px;"></i>Save contact
-                  </a>
-              </div>
-            </div>
-        </div>
+  <form id="contact_form" role="form" method="POST">
+    <input type="hidden" id="myVariable" name="" />
+    {% csrf_token %}
+    {% if contact_form.errors %}
+    <div class="ibox-content m-b-sm error-box">
+        <strong>Please ensure that you have completed all the required fields *</strong>
     </div>
+    {% endif %}
+      <div class="ibox-content m-b-sm border-bottom">
+        <div class="row">
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label>{{ contact_form.first_name.label }} *</label>
+              {{ contact_form.first_name }}
+            </div>
+          </div>
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group clockpicker" style="margin-left: 20px;" data-autoclose="true">
+              <label>{{ contact_form.last_name.label }} *</label>
+              {{ contact_form.last_name }}
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label>{{ contact_form.job_title.label }} *</label>
+              {{ contact_form.job_title }}
+            </div>
+          </div>
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label>{{ contact_form.company.label }}</label>
+              {{ contact_form.company }}
+            </div>
+          </div>
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >{{ contact_form.project.label }}</label>
+              {{ contact_form.project }}
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >{{ contact_form.email_work.label }}</label>
+              {{ contact_form.email_work }}
+            </div>
+          </div>
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >{{ contact_form.phone_mobile.label }}</label>
+              {{ contact_form.phone_mobile }}
+            </div>
+          </div>
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >{{ contact_form.phone_work.label }}</label>
+              {{ contact_form.phone_work }}
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >{{ contact_form.linkedin.label }}</label>
+              {{ contact_form.linkedin }}
+            </div>
+          </div>
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >{{ contact_form.facebook.label }}</label>
+              {{ contact_form.facebook }}
+            </div>
+          </div>
+          <div class="col-sm-4 timesheet_fields">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >{{ contact_form.twitter.label }}</label>
+              {{ contact_form.twitter }}
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="form-group" style="margin-left: 20px;">
+              <label style="display: block;" >Additional Info</label>
+              {{ contact_form.additional_info }}
+            </div>
+          </div>
+        </div>
+      </div>
+  </form>
+  <div class="row">
+    <div class="docket_buttons btn-group pull-right" style="margin-right: 15px; margin-top: 20px;">
+        <a class="btn btn-primary visible-xs visible-sm" onclick="contact_form.myVariable.name='edit_contact';contact_form.submit();">
+          <i class="fa fa-floppy-o" style="padding-right: 5px;"></i>Save Contact
+        </a>
+    </div>
+    <div class="docket_buttons btn-group pull-left" style="margin-right: 15px; margin-top: 20px;">
+        <a class="btn btn-primary visible-xs visible-sm" data-toggle="modal" data-target="#modal-contact-delete">
+          <i class="fa fa-trash" style="padding-right: 5px;"></i>Delete Contact
+        </a>
+    </div>
+  </div>
 </div>
+
 
 <div id="modal-contact-delete" class="modal fade" aria-hidden="true">
     <div class="modal-dialog timesheet_sum">
@@ -105,114 +172,20 @@
               </div>
             </div>
             <div class="modal-footer" style="border: 0px; margin-top: 0px; ">
-                <form action="" name="delete_company" method="POST">
+                <form action="" name="delete_contact" method="POST">
                     {% csrf_token %}
-                    {{ delete_company_form }}
+                    {{ delete_contact_form }}
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-danger" name="delete_company">Delete contact</button>
+                    <button type="submit" class="btn btn-danger" name="delete_contact">Delete contact</button>
                 </form>
             </div>
         </div>
     </div>
 </div>
 
-<div class="modal inmodal fade" id="deleteContactModal" tabindex="-1" role="dialog"  aria-hidden="true">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title">Delete Company</h4>
-            </div>
-            <div class="modal-body">
-                <p>Are you sure you want to delete this company?</p>
-            </div>
-            <div class="modal-footer">
-                <form action="" name="delete_company" method="POST">
-                    {% csrf_token %}
-                    {{ delete_company_form }}
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-danger" name="delete_company">Delete company</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
 {% endblock content %}
 
 {% block javascript %}
-
-<script>
-  // This example displays an address form, using the autocomplete feature
-  // of the Google Places API to help users fill in the information.
-
-  // This example requires the Places library. Include the libraries=places
-  // parameter when you first load the API. For example:
-  // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
-
-  var placeSearch, autocomplete;
-  var componentForm = {
-    street_number: 'short_name',
-    route: 'long_name',
-    locality: 'long_name',
-    administrative_area_level_1: 'short_name',
-    country: 'long_name',
-    postal_code: 'short_name'
-  };
-
-  function initAutocomplete() {
-    // Create the autocomplete object, restricting the search to geographical
-    // location types.
-    autocomplete = new google.maps.places.Autocomplete(
-        /** @type {!HTMLInputElement} */(document.getElementById('autocomplete')),
-        {types: ['geocode']});
-
-    // When the user selects an address from the dropdown, populate the address
-    // fields in the form.
-    autocomplete.addListener('place_changed', fillInAddress);
-  }
-
-  function fillInAddress() {
-    // Get the place details from the autocomplete object.
-    var place = autocomplete.getPlace();
-
-    for (var component in componentForm) {
-      document.getElementById(component).value = '';
-      document.getElementById(component).disabled = false;
-    }
-
-    // Get each component of the address from the place details
-    // and fill the corresponding field on the form.
-    for (var i = 0; i < place.address_components.length; i++) {
-      var addressType = place.address_components[i].types[0];
-      if (componentForm[addressType]) {
-        var val = place.address_components[i][componentForm[addressType]];
-        document.getElementById(addressType).value = val;
-      }
-    }
-  }
-
-  // Bias the autocomplete object to the user's geographical location,
-  // as supplied by the browser's 'navigator.geolocation' object.
-  function geolocate() {
-    if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(function(position) {
-        var geolocation = {
-          lat: position.coords.latitude,
-          lng: position.coords.longitude
-        };
-        var circle = new google.maps.Circle({
-          center: geolocation,
-          radius: position.coords.accuracy
-        });
-        autocomplete.setBounds(circle.getBounds());
-      });
-    }
-  }
-</script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVvfJfbo6XezSoU_xZL17d5p5BBs5ik38&libraries=places&callback=initAutocomplete"
-    async defer>
-</script>
 
 <script src="{% static 'js/plugins/summernote/summernote.min.js' %}"></script>
 <script src="{% static 'js/jquery.autocomplete.js' %}"></script>
@@ -227,20 +200,12 @@ $('#summernote').summernote({
   ]
 });
 
-
-var companies = [
-  {% for company in company_list %}
-  '{{ company }}',
-  {% endfor %}
-];
-
-$(function() {
-  $("#contact_company_tag").autocomplete({
-    source:[companies]
-  });
+// Sets the project select box to empty if the company select box is changed
+$("#id_company").on('change',function(){
+  $("#id_project").empty()
 });
 
 </script>
 
-
+{{ contact_form.media.js }}
 {% endblock javascript %}
